:memo: :: attendance batch job